--- a/src/index.html
+++ b/src/index.html
@@ -405,9 +405,9 @@
                         <a href="#">для водителей</a>
                     </div>
                     <div class="footer_links_sub">
-                        <a href="#">центр поддержки</a>
+                        <a href="#">Саппорт</a>
                         <a href="#">вакансии</a>
-                        <a href="#">разработчики</a>
+                        <a href="#">Девелоперы</a>
                         <a href="#">блог</a>
                         <a href="#">о нас</a>
                     </div>
