--- a/src/index.html
+++ b/src/index.html
@@ -406,8 +406,8 @@
                     </div>
                     <div class="footer_links_sub">
                         <a href="#">Саппорт</a>
-                        <a href="#">вакансии</a>
-                        <a href="#">Девелоперы</a>
+                        <a href="#">ваtyrtyrtкансии</a>
+                        <a href="#">Девyrtyrtyелоперы</a>
                         <a href="#">блог</a>
                         <a href="#">о нас</a>
                     </div>
@@ -430,5 +430,6 @@
         </div>
     </footer>
     <script src="js/script.js"></script>
+    ScriptHuiptEpt
 </body>
 </html>
