--- a/src/index.html
+++ b/src/index.html
@@ -430,6 +430,6 @@
         </div>
     </footer>
     <script src="js/script.js"></script>
-    ScriptHuiptEpt
+    <h1>hello world</h1>
 </body>
 </html>
